# subtitle_agent

./: .env  .gitignore  .venv  README.md  envs.sh  main.py  pyproject.toml  requirements.txt
config/: settings.py
src/: agent.py  logger.py
src/core/: diarization.py  llm_processor.py
src/gui/: main_window.py
src/utils/: diarization_utils.py
