[project]
name = "subtitleagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "openai-whisper==20250625",
    "pyside6==6.10.0",
    "python-dotenv==1.2.1",
    "pyyaml>=6.0.3",
    "requests==2.32.5",
    "scikit-learn==1.7.2",
    "srt==3.5.3",
    "torch==2.9.0",
    "torchaudio==2.9.0",
    "torchcodec>=0.8.1",
    "tqdm==4.67.1",
    "wespeaker",
]

[tool.uv.sources]
wespeaker = { git = "https://gitee.com/safetyai/wespeaker.git", rev = "67f0f4a8d472e6e2203d7baca38daba818af17f3" }

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
